Only append child's children if there's something to append

BUG: 513758